fix  homepage misalignment

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 /* Homepage*/
 .homepage-hero {
+  padding: 20px 0px 20px 0px;
   min-height: 85vh;
   background: url("../src/static/images/hero-background.jpeg") no-repeat center
     center fixed;
@@ -27,7 +28,7 @@
 }
 
 .hero-logo img {
-  max-width: 80%;
+  max-width: 100%;
   max-height: 85vh;
   object-fit: contain;
 }
